realestate response mapping
